--- a/app/src/main/res/layout/activity_random.xml
+++ b/app/src/main/res/layout/activity_random.xml
@@ -124,8 +124,8 @@
 
     <Button
         android:id="@+id/randomButton"
-        android:layout_width="186dp"
-        android:layout_height="183dp"
+        android:layout_width="162dp"
+        android:layout_height="144dp"
         android:layout_marginStart="136dp"
         android:layout_marginTop="80dp"
         android:layout_marginEnd="95dp"
@@ -147,8 +147,8 @@
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/TEXTVIEW4"
-        app:layout_constraintVertical_bias="0.253"
-        tools:ignore="TextSizeCheck" />
+        app:layout_constraintVertical_bias="0.478"
+        tools:ignore="TextSizeCheck,VisualLintBounds" />
 
     <androidx.constraintlayout.widget.Group
         android:id="@+id/group"
